[FIX] se solucionan errores conforme a lo recomendado por sonarlint