@@ -11,8 +11,6 @@ import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collector;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -44,7 +42,7 @@ public class SupplierServiceImpl implements SupplierService {
         return items.stream().map(item -> Item.builder()
                 .id(String.valueOf(item.getSupplierId()))
                 .description(item.getDescription())
-                .build()).collect(Collectors.toList());
+                .build()).toList();
 
     }
 }
